# libhal-atmega

./: .clangd  CMakeLists.txt  README.md  conanfile.py  generate_sources.py
.github/workflows/: ci.yml  update_name.yml
atdf/: ATmega328P.atdf  ATmega328PB.atdf  generate_sources.py
codegen/: atdf_parse.py  generate_headers.py  generate_sources.py
conan/profiles/: atmega328p  profile2
demos/: CMakeLists.txt  conanfile.py  main.cpp
demos/applications/: blinker.cpp  hello.cpp
include/libhal-atmega/: mcu.hpp  output_pin.hpp  pin.hpp  uart.hpp
include/libhal-atmega328p/: output_pin.hpp  uart.hpp
src/: output_pin.cpp  status_lock.hpp  uart.cpp
test_package/: CMakeLists.txt
tests/: main.test.cpp  output_pin.test.cpp
